# flaky-test-detector

./: .coverage  .gitignore  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  action.yml  flaky-report.html  pyproject.toml
.github/workflows/: ci.yml  publish.yml
action/: entrypoint.py
docs/: DESIGN-BRIEF.md  sample-report-flaky.html  sample-report-run.html
docs/decisions/: ai-investigator.md
docs/superpowers/plans/: 2026-04-19-ai-investigator.md
docs/superpowers/specs/: 2026-04-19-ai-investigator-design.md
scripts/: generate_sample_reports.py  pre-commit
src/flakydetector/: __init__.py  analyzer.py  cli.py  fingerprint.py  investigator.py  models.py  quarantine.py  store.py
src/flakydetector/parsers/: __init__.py  allure_json.py  junit_xml.py  plain_log.py
src/flakydetector/reporters/: html_report.py  json_report.py  markdown.py
tests/: conftest.py  eval_investigator.py  test_action.py  test_all.py  test_allure_json.py  test_analyzer.py  test_cli_integration.py  test_fingerprint.py  test_html_report.py  test_investigator.py  test_junit_xml.py  test_plain_log.py  test_quarantine.py  test_reporters.py  test_store.py
tests/fixtures/: allure_labels_varied.json  allure_parameterized.json  allure_with_history_id.json  junit_flat_testcases.xml  junit_nested_suites.xml  junit_surefire_rerun.xml  junit_system_out.xml  sample_allure_result.json  sample_junit.xml  sample_junit_run2.xml
tests/fixtures/allure_dir/: abc123-result.json  def456-result.json  ghi789-container.json
tests/fixtures/investigator/: fixtures.py
