[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaky-test-detector"
version = "0.1.0"
description = "Detect flaky tests by parsing CI artifacts, fingerprinting failures, and tracking test stability across runs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Murat Kus", email = "me@murat-kus.com"},
]
keywords = ["testing", "flaky-tests", "ci", "qa", "test-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pyyaml>=6.0",
    "ruff>=0.9",
    "ty",
]

[project.scripts]
flaky-detect = "flakydetector.cli:main"

[project.urls]
Homepage = "https://github.com/MuratKus/flaky-test-detector"
Issues = "https://github.com/MuratKus/flaky-test-detector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flakydetector"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["flakydetector"]
